--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "axios": "^0.18",
+        "babel-preset-react": "^6.24.1",
         "cross-env": "^5.1",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
