added bootstrap css in webpack

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,4 @@
 {
-    "/dist/js/home-app.js": "/dist/js/home-app.js"
+    "/dist/js/home-app.js": "/dist/js/home-app.js",
+    "/dist/css/home-app.css": "/dist/css/home-app.css"
 }
