--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "devDependencies": {
         "axios": "^0.18",
         "babel-preset-react": "^6.24.1",
+        "bootstrap": "^4.1.3",
         "cross-env": "^5.1",
+        "css-loader": "^1.0.0",
+        "file-loader": "^2.0.0",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
         "react": "^16.5.2",
@@ -20,6 +23,7 @@
         "react-redux": "^5.0.7",
         "reactstrap": "^6.5.0",
         "redux": "^4.0.1",
+        "redux-thunk": "^2.3.0",
         "sweetalert2": "^7.28.5"
     }
 }
