--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
         "react-redux": "^5.0.7",
+        "react-table": "^6.8.6",
         "reactstrap": "^6.5.0",
         "redux": "^4.0.1",
         "redux-thunk": "^2.3.0",
